--- a/report.tex
+++ b/report.tex
@@ -17,6 +17,9 @@
 \usepackage{microtype}              % Pour la justification du texte
 \usepackage{tabularx}               % Pour des tableaux plus flexible
 \usepackage[threshold=1]{csquotes}  % Pour les blocs de citations
+\usepackage{tikz}                   % Pour les packages
+\usepackage{pgfplots}
+\usepackage{pgfplotstable}
 \makeatletter
 \newcommand*{\currentname}{\@currentlabelname}
 \makeatother
@@ -140,6 +143,7 @@
 \begin{document}
 
 \input{misc/front_cover}
+\input{misc/thanks}
 \tableofcontents
 \vspace{2cm}
 \input{misc/abstract}
