--- a/sections/context.tex
+++ b/sections/context.tex
@@ -183,8 +183,8 @@ contenant ce code source généré s'appelle de manière générale \texttt{ast.
 
 Par exemple, dans le cas du parseur, on fournira au générateur la description 
 d'un AST qui définit la structure que doit avoir les politiques écrites par les 
-utilisateurs. Cette description est contenue dans le fichier \texttt{phaistos.
-ast}, dont un extrait est disponible sur la Figure~\ref{fig:policy_ast}. Comme 
+utilisateurs. Cette description est contenue dans le fichier \texttt{phaistos.ast}
+, dont un extrait est disponible sur la Figure~\ref{fig:policy_ast}. Comme 
 on peut le voir dans l'extrait à la Ligne~\ref{script_rule}, on retrouve la 
 racine de l'arbre appelée \texttt{script}, le point d'entré qui va contenir 
 toutes les déclarations de haut niveau d'une politique PhaistOS dans la 
