--- a/misc/references.bib
+++ b/misc/references.bib
@@ -1,14 +1,14 @@
 % https://www.overleaf.com/learn/latex/Bibliography_management_with_bibtex#Reference_guide
 
 @inproceedings{Barreto-Muller:asf2002,
-  author = {Luciano Porto Barreto et Gilles Muller},
-  title = {Bossa: une approche langage à la conception d'ordonnanceurs de 
+  author    = {Luciano Porto Barreto et Gilles Muller},
+  title     = {Bossa: une approche langage à la conception d'ordonnanceurs de 
   processus},
   booktitle = {Journées francophones des jeunes chercheurs en systèmes 
   d'exploitation (ASF'2002)},
-  year = {2002},
-  month = {Avril},
-  URL = {https://hal.inria.fr/inria-00072431/}
+  year      = {2002},
+  month     = {Avril},
+  URL       = {https://hal.inria.fr/inria-00072431/}
 }
 
 @inproceedings{schack2008celf,
@@ -48,4 +48,13 @@
   Systems},
   pages={1--16},
   year={2020}
+}
+
+@manual{visitors2021manual,
+  title        = {Visitors (Manual)},
+  author       = {François Pottier},
+  organization = {Inria Paris},
+  URL          = {http://gallium.inria.fr/~fpottier/visitors/manual.pdf},
+  year         = {2021},
+  month        = {Juin},
 }
