--- a/misc/abstract.tex
+++ b/misc/abstract.tex
@@ -1,3 +1,38 @@
 \begin{abstract}
-TODO
+
+Ce rapport de stage résume mon expérience de travail au sein du Laboratoire 
+d'Informatique de Grenoble durant ma quatrième année d'études universitaires. 
+Afin de valider mon année d'étude à l'école d'ingénieur de Polytech Grenoble, 
+ce rapport sera fourni ainsi qu'une soutenance à un jury responsable de 
+m'évaluer. 
+
+Je faisais parti de l'équipe Erods et ma mission consistait à tester et 
+améliorer le compilateur d'un langage de programmation dédié à l'ordonnancement 
+d'entrées/ sorties d'un système linux. L'outil en question s'appelle PhaistOS 
+et a été développé par Nick Papoulias, un chercheur postdoctoral qui ne travail 
+maintenant plus sur le projet.
+
+Durant ce stage différentes tâches m'ont été attribuées par mon tuteur, j'ai 
+commencé par m'approprié le sujet en lisant la documentation et le code 
+qu'avait écrit Nick. J'ai ensuite fait de la documentation puis du 
+développement sur le compilateur. J'ai finis mon stage par des tests de 
+performances et l'écriture d'un papier scientifique portant sur le compilateur.
+
+\begin{center}
+    \vspace{0.5cm}
+    $\prec \cdot$ --- $\cdot \succ$ 
+    \vspace{0.5cm}
+\end{center}
+
+This report summarizes my internship at the Laboratoire d'Informatique de Grenoble during my fourth year of university studies at Polytech Grenoble. This report will be evaluated, along with my defense before a jury of the school.
+
+I was part of the Erods team and my mission was about testing and improving the 
+compiler of a new specific language designed to customize policies in input/
+output scheduling. The tool's name is PhaistOS and is currently working for 
+linux operating system. It was developed by Nick Papoulias, a postdoctoral 
+research fellow that is no more working on the project.
+
+During my internship, I was given different tasks by my tutor, and I started by understanding the tool by reading documentation and reading code lines wrote by Nick. After that, I wrote some documentation and then developed on the compiler. I finished my internship by testing the performances and by writing a scientific paper about the compiler.
+
 \end{abstract}
+\newpage
