--- a/misc/front_cover.tex
+++ b/misc/front_cover.tex
@@ -8,6 +8,8 @@
     {\scshape \Large Victor MALOD \par}
     {\scshape \Large INFO4 \par}
     {\scshape \Large Rapport de stage 2021 \par}
+    \vspace{5mm}
+    {\scshape \normalsize Co-auteur : Nicolas PALIX \par}
     
     \vfill
     {\scshape \huge Développement sur le compilateur de PhaistOS \par}
@@ -16,6 +18,8 @@
     {\scshape\Large Tome Principal \par}
     {\scshape \Large et \par}
     {\scshape \Large Annexe \par}
+    \vspace{5mm}
+    {\scshape \small 27 pages \par}
     
     \vfill
     {\Large 2020 - 2021 \par}
