--- a/misc/thanks.tex
+++ b/misc/thanks.tex
@@ -1,5 +1,20 @@
 \section*{Remerciements}
 
-blabla merci !
+Je tiens tout d'abord à remercier le Laboratoire d'Informatique de Grenoble de 
+m'avoir accueilli, ainsi que mon tuteur Pr. Nicolas Palix qui a pu m'offrir 
+cette opportunité, et m'encadrer tout au long de celui-ci. Sa disponibilité, 
+ses conseils et sa pédagogie m'ont permis de gagner en expérience 
+professionnelle.
 
-\newpage
+\vspace{5mm}
+
+Je remercie aussi Pr. Vincent Danjean pour ses conseils quant à la rédaction du 
+rapport et la préparation de la soutenance, sans oublier sa fameuse tarte au 
+c'meau, spécialité de sa région.
+
+\vspace{5mm}
+
+Je remercie Guillaume Vacherias, étudiant de ma promotion, en stage avec 
+Nicolas, qui m'aura apporté conseils et compagnie malgré l'épidémie.
+
+\vspace{1.5cm}
