--- a/report.tex
+++ b/report.tex
@@ -144,9 +144,11 @@
 
 \input{misc/front_cover}
 \input{misc/thanks}
-\tableofcontents
-\vspace{2cm}
 \input{misc/abstract}
+\tableofcontents
+\newpage
+\listoffigures
+\newpage
 \input{sections/intro}
 \input{sections/phaistos}
 \input{sections/context}
