--- a/sections/context.tex
+++ b/sections/context.tex
@@ -1,4 +1,4 @@
-\section{TO DEFINE}
+\section{PhaistOS, le générateur d'ordonnanceurs d'E/S}
 \label{context}
 
 \subsection{Les planificateurs d'E/S}
