--- a/sections/phaistos.tex
+++ b/sections/phaistos.tex
@@ -1,12 +1,14 @@
 
-\section{PhaistOS, le générateur d'ordonnanceurs d'E/S}
+\section{PhaistOS, le fruit du projet VeriAMOS}
 \label{phaistos}
 
 ``PhaistOS'' est le nom d'un Langage Dédié, ou Domain Specific Language (DSL) 
-en anglais. Utilisé dans le domaine de l'ordonnancement des entrées/sorties (E/
-S) d'un système d'exploitation (SE), il a pour but de faciliter la conception 
-et la validation de politiques d'E/S écrites par un utilisateur. Il est le 
-fruit issu du projet VeriAMOS visant à s'attaquer au problème de vérification d'une classe de services de systèmes d'exploitation.
+en anglais, c'est un langage de programmation créé pour le domaine de 
+l'ordonnancement des entrées/sorties (E/S) d'un système d'exploitation (SE). Il 
+a pour but de faciliter la conception et la validation de politiques d'E/S 
+écrites par un utilisateur. Il est le fruit issu du projet VeriAMOS visant à 
+s'attaquer au problème de vérification d'une classe de services de systèmes 
+d'exploitation.
 
 \subsection{Pourquoi PhaistOS ?}
 \label{why_phaistos}
