--- a/misc/back_cover.tex
+++ b/misc/back_cover.tex
@@ -1,3 +1,59 @@
 \newpage
 
-Dos de rapport ici.
+
+
+\begin{titlepage}
+    \begin{center}
+    \LARGE \textbf{Dos du rapport}
+    \vspace{0.7cm}
+    \end{center}
+    \par
+    \raisebox{-.5\height}{Étudiant : Victor Malod}
+    \hfill
+    \raisebox{-.5\height}{Année d'étude dans la spécialité : INFO 4}
+    
+    \vspace{1cm}
+    \par {Entreprise : Laboratoire Informatique de Grenoble}
+    \par {Adresse : Bâtiment IMAG, 700 Av. Centrale, 38401 Saint-Martin-d'Hères}
+    \par {Téléphone : 04 57 42 14 00}
+
+    \vspace{1cm}
+    \par {Responsable administratif : Pascale Poulet}
+    \par {Téléphone : 04 57 42 14 01}
+    \par {Courriel : pascale.poulet@imag.fr}
+
+    \vspace{1cm}
+    \par {Tuteur de stage : Nicolas Palix}
+    \par {Téléphone : 04 57 42 15 38}
+    \par {Courriel : nicolas.palix@imag.fr}
+
+    \vspace{1cm}
+    \par {Enseignant-référent : Vincent Danjean }
+    \par {Téléphone : 04 57 42 14 76}
+    \par {Courriel : vincent.danjean@imag.fr}
+
+    \vspace{1cm}
+    \par {Titre : \large Développement sur le compilateur de PhaistOS }
+
+    \vspace{1cm}
+\par {\underline{Résumé :}
+
+Ce rapport de stage résume mon expérience de travail au sein du Laboratoire 
+d'Informatique de Grenoble durant ma quatrième année d'études universitaires. 
+Afin de valider mon année d'étude à l'école d'ingénieur de Polytech Grenoble, 
+ce rapport sera fourni ainsi qu'une soutenance à un jury responsable de 
+m'évaluer. 
+
+Je faisais parti de l'équipe Erods et ma mission consistait à tester et 
+améliorer le compilateur d'un langage de programmation dédié à l'ordonnancement 
+d'entrées/ sorties d'un système linux. L'outil en question s'appelle PhaistOS 
+et a été développé par Nick Papoulias, un chercheur postdoctoral qui ne travail 
+maintenant plus sur le projet.
+
+Durant ce stage différentes tâches m'ont été attribuées par mon tuteur, j'ai 
+commencé par m'approprié le sujet en lisant la documentation et le code 
+qu'avait écrit Nick. J'ai ensuite fait de la documentation puis du 
+développement sur le compilateur. J'ai finis mon stage par des tests de 
+performances et l'écriture d'un papier scientifique portant sur le compilateur.}
+
+\end{titlepage}
