--- a/sections/hindsight.tex
+++ b/sections/hindsight.tex
@@ -13,8 +13,8 @@ Si j'avais pu continuer à travailler sur le compilateur PhaistOS, je pense qu'u
     que l'on pouvait remplacer ces visiteurs à l'aide d'une bibliothèque~\cite
     {visitors2021manual}, 
     déléguant ainsi une grande charge de travail.
-    \item Régler tout les soucis de compilation ocaml présent dans les 
-    différents dossier, comme cela a été fait avec \texttt{Static-Analysis}.
+    \item Régler tous les soucis de compilation ocaml présents dans les 
+    différents dossiers, comme cela a été fait avec \texttt{Static-Analysis}.
     \item Créer de nouvelles politiques avec PhaistOS, basées sur celles qui 
     existent déjà, pour pouvoir tester les limites du DSL plus en profondeur, 
     et explorer les nouvelles pistes d'améliorations.
@@ -26,16 +26,16 @@ Si j'avais pu continuer à travailler sur le compilateur PhaistOS, je pense qu'u
 \end{enumerate}
 
 Cependant, ce n'est pas la priorité du chercheur de rendre le code plus 
-qualitif ou robuste. Par contre, toutes ces idées pourraient faire l'objet d'un 
-futur stage, facilitant ainsi le travail du chercheur sur la partie importante 
-du projet de recherche. 
+qualitatif ou robuste. Par contre, toutes ces idées pourraient faire l'objet 
+d'un futur stage, facilitant ainsi le travail du chercheur sur la partie 
+importante du projet de recherche. 
 
 \subsection{Gestion de projet}
 
 Au début du stage je n'avais pas accès aux locaux du bâtiment d'accueil, je 
 travaillais donc depuis chez moi. Je passais des appels avec mon tuteur sur la 
 plateforme bbb de l'UGA et on discutait de l'environement de travail et des 
-premières tâches à réalisées. L'outil Slack nous aura aussi bien aidé pour 
+premières tâches à réaliser. L'outil Slack nous aura aussi bien aidé pour 
 apporter une aide à l'écrit, des fois nécessaire quand on veut partager du 
 texte.
 
@@ -44,8 +44,6 @@ l'existant, améliorations du compilateur, tests de performances), je les ai
 donc sous-divisées. J'ai adapté mes travaux au fur et à mesure, et pour 
 illustrer ça, on peut comparer le planning de travail estimé au réel à travers 
 les Figure~\ref{fig:gantt_1}~et~\ref{fig:gantt_2}, disponibles en annexe.
-
-<RETOUR SUR LES GANTT>
 
 Il est à noter qu'à partir du 1er juillet, je pouvais me rendre trois fois par 
 semaine au bureau, ce qui a grandement accéléré les choses. Changer 
